--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#FA122E">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#FA122E">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#FA122E">
+
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -120,12 +129,12 @@
 
 
   <!-- Inicia section 2 Planes -->
-  <section class="d-flex py-5 ">
-    <div class="container align-self-center">
+  <section class="d-flex py-5 mb-4">
+    <div class="container align-self-center pt-4">
 
       <div class="w-75 text-center mx-auto mb-5 py-4">
-        <h2 class="text-dark L-S-n1">Un plan simple y <span class="Text-Primary font-weight-bold">económico para todos</span></h2>
-        <p class="lead text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo similique porro iusto. Quidem voluptatum beatae quasi expedita at veniam ipsa.</p>
+        <h2 class="text-dark mb-4 L-S-n1">Un plan simple y <span class="Text-Primary font-weight-bold">económico para todos</span></h2>
+        <p class="lead text-muted FontsSize-23">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo similique porro iusto. Quidem voluptatum beatae quasi expedita at veniam ipsa.</p>
       </div>
 
       <div class="row justify-content-center">
@@ -180,6 +189,63 @@
   </section>
 
 
+  <!-- Inicia section PATROCINADORES -->
+  <section class="BK_Color_Gray-x py-5 mt-5">
+    <div class="container py-5">
+
+      <h2 class="mb-4 mx-auto text-center Bold L-S-n05">Nuestros Patrocinadores</h2>
+      <h4 class="m-0 mx-auto text-center lead Light FontsSize-23 L-H-N">Estamos conectados con los mejores y certificados en el sector</h4>
+
+      <div class="H_Divider"></div>
+
+      <div class="d-flex flex-column flex-md-row align-items-center justify-content-around py-5">
+        <div class="py-4"><img class="img-fluid" src="img/Cnet.svg" alt="Logo Patrocinadores"></div>
+        <div class="py-4"><img class="img-fluid" src="img/Nasdaq.svg" alt="Logo Patrocinadores"></div>
+        <div class="py-4"><img class="img-fluid" src="img/Yahoo finance.svg" alt="Logo Patrocinadores"></div>
+        <div class="py-4"><img class="img-fluid" src="img/MaestroSponsor.png" style="height: 67px;" alt="Logo Patrocinadores"></div>
+      </div>
+
+    </div><!-- Container-->
+  </section>
+
+
+  <!-- Section Contactenos -->
+  <footer class="BK-Image-s2 BK_Color_Dark py-5">
+    <div class="container pt-5">
+
+      <h2 class="mb-3 mx-auto text-center Color_Light Bold L-S-n05">Contáctanos para más Información</h2>
+      <h4 class="m-0 text-center Color_Muted lead Light FontsSize-19 L-H-N">Tienes una idea de negocio, quieres comprar, quieres vender, es momento de empezar tu proyecto EnLineApp. </h4>
+
+      <div class="V_Divider"></div>
+
+      <div class="row row-cols-1 row-cols-md-2 justify-content-center py-5">
+        
+            <div class="w-100 py-2 px-2">
+              <input type="text" class="form-control py-4 shadow" placeholder="Nombre">
+            </div>
+            <div class="w-100 py-2 px-2">
+              <input type="text" class="form-control py-4 shadow" placeholder="Apellido">
+            </div>
+            <div class="w-100 py-2 px-2">
+              <input type="email" class="form-control py-4 shadow" placeholder="Correo">
+            </div>
+            <div class="w-100 py-2 px-2">
+              <a href="#" class="btn w-100 btn-primary Btn-Reset Btn-Primary shadow">Recibir más Información</a>
+            </div>
+        
+      </div>
+
+      <!-- identidad marca -->
+      <a class="d-flex justify-content-center text-hide py-5 my-3" href="#">
+        <img src="img/Logo_Enlinea_Trasparent.png" class="img-fluid BrandImgFooter" alt="Img-Brand" loading="lazy">EnLineApp
+      </a>
+
+      <div class="d-flex justify-content-center Color_Light-x">
+        <h5 class="text-center Color_Muted Light FontsSize-17"> © <span class="Semibold">EnLineApp 2020</span>. All Rights Reserved.  *  Servicios profesionales y de alta calidad - Santander -Colombia</h5>
+      </div>
+
+    </div><!-- Container-->
+  </footer>
 
 
   <!-- Optional JavaScript -->
